# Image_processing

./: .gitignore  CMakeLists.txt  main.cpp
include/: improc.hpp  imqueue.hpp
src/: improc.cpp  imqueue.cpp
